2018-08-17  Istvan Kurucsai  <pistukem@gmail.com>

	* malloc/malloc.c (_int_malloc): Additional binning code checks.

2019-04-23  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	[BZ #18035]
	* elf/pldd-xx.c: Use _Static_assert in of pldd_assert.
	(E(find_maps)): Avoid use alloca, use default read file operations
	instead of explicit LFS names, and fix infinite loop.
	* elf/pldd.c: Explicit set _FILE_OFFSET_BITS, cleanup headers.
	(get_process_info): Use _Static_assert instead of assert, use default
	directory operations instead of explicit LFS names, and free some
	leadek pointers.

2019-04-03  TAMUKI Shoichi  <tamuki@linet.gr.jp>

	[BZ #22964]
	* localedata/locales/ja_JP (LC_TIME): Add entry for the new Japanese
	era.

2019-03-21  Stefan Liebler  <stli@linux.ibm.com>

	* sysdeps/s390/dl-procinfo.h (HWCAP_IMPORTANT):
	Add HWCAP_S390_VX and HWCAP_S390_VXE.

2019-01-31  Paul Eggert  <eggert@cs.ucla.edu>

	CVE-2019-9169
	regex: fix read overrun [BZ #24114]
	Problem found by AddressSanitizer, reported by Hongxu Chen in:
	https://debbugs.gnu.org/34140
	* posix/regexec.c (proceed_next_node):
	Do not read past end of input buffer.

2018-11-07  Andreas Schwab  <schwab@suse.de>

	[BZ #23864]
	* sysdeps/unix/sysv/linux/riscv/kernel-features.h
	(__ASSUME_SET_ROBUST_LIST) [__LINUX_KERNEL_VERSION < 0x041400]:
	Undef.

2018-09-21  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* NEWS: Add note about new TLE support on powerpc64le.
	* sysdeps/powerpc/nptl/tcb-offsets.sym (TM_CAPABLE): Remove.
	* sysdeps/powerpc/nptl/tls.h (tcbhead_t): Rename tm_capable to
	__ununsed1.
	(TLS_INIT_TP, TLS_DEFINE_INIT_TP): Remove tm_capable setup.
	(THREAD_GET_TM_CAPABLE, THREAD_SET_TM_CAPABLE): Remove macros.
	* sysdeps/powerpc/powerpc32/sysdep.h,
	sysdeps/powerpc/powerpc64/sysdep.h (ABORT_TRANSACTION_IMPL,
	ABORT_TRANSACTION): Remove macros.
	* sysdeps/powerpc/sysdep.h (ABORT_TRANSACTION): Likewise.
	* sysdeps/unix/sysv/linux/powerpc/elision-conf.c (elision_init): Set