@@ -1,3 +1,7 @@
+2018-12-20  Istvan Kurucsai <pistukem@gmail.com>
+
+	* malloc/malloc.c (mremap_chunk): Additional checks.
+
 2018-08-17  Istvan Kurucsai  <pistukem@gmail.com>
 
 	* malloc/malloc.c (_int_malloc): Additional binning code checks.
